[package]
name = "nettui"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
# System info (bytes/packets/errors per interface)
sysinfo = { version = "0.37", default-features = false, features = ["network"] }
anyhow = "1"
humansize = "2"